# gui_demo

./: CMakeLists.txt  STM32G491XX_FLASH.ld  bms_gui_demo.ioc
App/: CMakeLists.txt  cmake.sh
App/api/: CMakeLists.txt
App/api/charger/: CMakeLists.txt  charger.c  charger.h
App/api/current/: CMakeLists.txt
App/api/eeprom/: CMakeLists.txt
App/api/interface/: CMakeLists.txt
App/api/isolation/: CMakeLists.txt  isolation.c  isolation.h
App/api/packvolt/: CMakeLists.txt
App/api/segment/: CMakeLists.txt  segment.c  segment.h
App/core/: CMakeLists.txt
App/core/adc/: CMakeLists.txt
App/core/can/: CMakeLists.txt  can.c  can.h
App/core/fdcan/: CMakeLists.txt  fdcan.c  fdcan.h
App/core/i2c/: CMakeLists.txt
App/core/spi/: CMakeLists.txt  spi.c  spi.h
App/core/tim/: CMakeLists.txt
App/lib/: CMakeLists.txt
App/lib/adbms/: CMakeLists.txt
App/lib/amc/: CMakeLists.txt
App/lib/cab/: CMakeLists.txt
App/lib/elcon/: CMakeLists.txt
App/lib/gui/: CMakeLists.txt
App/lib/imd/: CMakeLists.txt
App/lib/nvm/: CMakeLists.txt
App/math/: CMakeLists.txt
App/math/cb/: CMakeLists.txt  cb.c  cb.h
App/math/pec/: CMakeLists.txt  pec.c  pec.h
App/math/soc/: CMakeLists.txt  coulomb.c  coulomb.h
App/math/thermal/: CMakeLists.txt  gen_table.py  thermistor.c  thermistor.h
App/services/: CMakeLists.txt
App/services/daemons/: CMakeLists.txt
App/services/program/: CMakeLists.txt  bms.c  (+3 more)
Core/Inc/: stm32g4xx_it.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
(+24 files in other folders)
